--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,18 +1,15 @@
 {
   "manifest_version": 3,
-  "name": "Chrome Extension with Tailwind, React & Webpack",
-  "description": "A chrome extension boilerplate built with Tailwind 3, React 17, Webpack 5, and Webpack Dev Server 4",
+  "name": "Marketing AI",
+  "description": "AI agent that generates advertising tweets for you.",
   "options_page": "options.html",
   "background": { "service_worker": "background.bundle.js" },
   "action": {
     "default_popup": "popup.html",
-    "default_icon": "icon-34.png"
-  },
-  "chrome_url_overrides": {
-    "newtab": "newtab.html"
+    "default_icon": "e7ad1921392c6cf96abb.png"
   },
   "icons": {
-    "128": "icon-128.png"
+    "128": "e7ad1921392c6cf96abb.png"
   },
   "content_scripts": [
     {
@@ -24,7 +21,11 @@
   "devtools_page": "devtools.html",
   "web_accessible_resources": [
     {
-      "resources": ["content.styles.css", "icon-128.png", "icon-34.png"],
+      "resources": [
+        "content.styles.css",
+        "e7ad1921392c6cf96abb.png",
+        "e7ad1921392c6cf96abb.png"
+      ],
       "matches": []
     }
   ]
